# weekmenter

./: .gitignore  .gitmodules  README.md  notes  pyproject.toml  requirements.txt
src/bot/: bot.py
src/weekmenter/: colors.py  const.py  image.py  main.py  results.py  segmentation.py  utils.py
tests/: test_generate_files.py  test_get_masks.py
tests/S1/: colors.csv
tests/S2/: colors.csv
