[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weekmenter"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "readme"]

[project.scripts]
weekmenter = "weekmenter.main:main"
bot = "bot.bot:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100